Add translations and fix

--- a/1. 概览.md
+++ b/1. 概览.md
@@ -24,7 +24,7 @@ Visual Studio Code在构建时考虑了可扩展性。从UI到编辑体验，几
 - __语言扩展__ 使用指南与示例代码解释了如何添加一个编程语言的支持
 - __测试与发布__ 包括了繁多扩展开发主题深入的指南，如[测试](7.%20%E6%B5%8B%E8%AF%95%E4%B8%8E%E5%8F%91%E5%B8%83/1.%20%E6%B5%8B%E8%AF%95%E6%89%A9%E5%B1%95.md)与[发布](7.%20%E6%B5%8B%E8%AF%95%E4%B8%8E%E5%8F%91%E5%B8%83/2.%20%E5%8F%91%E5%B8%83%E6%89%A9%E5%B1%95.md)扩展
 - __进阶指南__ 解释了进阶概念如[扩展宿主](8.%20%E8%BF%9B%E9%98%B6%E4%B8%BB%E9%A2%98/1.%20%E6%89%A9%E5%B1%95%E5%AE%BF%E4%B8%BB.md)、[支持远程开发与GitHub Codespaces](8.%20%E8%BF%9B%E9%98%B6%E4%B8%BB%E9%A2%98/2.%20%E6%94%AF%E6%8C%81%E8%BF%9C%E7%A8%8B%E5%BC%80%E5%8F%91%E4%B8%8EGitHub%20Codespaces.md)和[计划应用程序接口](8.%20%E8%BF%9B%E9%98%B6%E4%B8%BB%E9%A2%98/3.%20%E4%BD%BF%E7%94%A8%E8%AE%A1%E5%88%92%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F%E6%8E%A5%E5%8F%A3.md)
-- __查阅__ 包含详尽的[VS Code应用程序接口](9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F%E6%8E%A5%E5%8F%A3.md)，[贡献点](9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md)与许多其他主题的参考
+- __查阅__ 包含详尽的[VS Code应用程序接口](9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F%E6%8E%A5%E5%8F%A3.md)，[贡献点](9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md)与许多其他主题的参考
 ## 新鲜的
 VS Code更新呈月周期性，扩展API同样应用
 新的特性与API每个月都可用并增加VS Code扩展的能力
