--- a/2. 开始/1. 您的第一个扩展.md
+++ b/2. 开始/1. 您的第一个扩展.md
@@ -43,8 +43,8 @@ yo code
 
 这里是一些您可以尝试的点子
 - 在命令面板中给予**Hello World**一个新名字
-- [贡献](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md)另一个使用信息消息显示当前时间的命令。贡献点在`package.json`[扩展清单](/9.%20%E6%9F%A5%E9%98%85/4.%20%E6%89%A9%E5%B1%95%E6%B8%85%E5%8D%95.md)中静态声明扩展VS Code，比如添加命令、菜单或快捷键至您的扩展中
-- 替换`vscode.window.showInformationMessage`为另一个[VS Code应用程序接口](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F%E6%8E%A5%E5%8F%A3.md)调用显示一个警告消息
+- [贡献](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md)另一个使用信息消息显示当前时间的命令。贡献点在`package.json`[扩展清单](/9.%20%E5%8F%82%E8%80%83/4.%20%E6%89%A9%E5%B1%95%E6%B8%85%E5%8D%95.md)中静态声明扩展VS Code，比如添加命令、菜单或快捷键至您的扩展中
+- 替换`vscode.window.showInformationMessage`为另一个[VS Code应用程序接口](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F%E6%8E%A5%E5%8F%A3.md)调用显示一个警告消息
 ## 调试扩展
 VS Code的内建调试功能可以简单地调试扩展。通过点击行旁边的槽来设置断点，VS Code将在断点暂停。您可以在编辑器中将光标悬停在变量上或在左边使用**运行与调试**视图检查变量的值。调试控制台允许您估算表达式。
 
