--- a/2. 开始/3. 结束语.md
+++ b/2. 开始/3. 结束语.md
@@ -4,7 +4,7 @@
 然而，我们仅仅看到了冰山一角，这里有一些建议路线为了您的更远VS Code扩展开发技能
 
 ## 扩展功能
-在这节，我们分割[VS Code API](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md)和[贡献点](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md)为几个分类，每个具有简短扩展能做的介绍。通过查阅[VS Code API](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md)证实您的扩展想法是可实现的或通过阅读[扩展功能](/3.%20%E6%89%A9%E5%B1%95%E5%8A%9F%E8%83%BD/1.%20%E6%A6%82%E8%A7%88.md)产生新的扩展想法
+在这节，我们分割[VS Code API](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md)和[贡献点](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md)为几个分类，每个具有简短扩展能做的介绍。通过查阅[VS Code API](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md)证实您的扩展想法是可实现的或通过阅读[扩展功能](/3.%20%E6%89%A9%E5%B1%95%E5%8A%9F%E8%83%BD/1.%20%E6%A6%82%E8%A7%88.md)产生新的扩展想法
 ## 指南与示例
 我们有一大堆您可以修改的示例扩展，有一些包括详细解释源代码的指南。您可以在[扩展指南列表](/4.%20%E6%89%A9%E5%B1%95%E6%8C%87%E5%8D%97/1.%20%E6%A6%82%E8%A7%88.md)或[vscode-extension-samples](https://github.com/microsoft/vscode-extension-samples)仓库找到所有示例和指南
 
