--- a/3. 扩展功能/2. 通用功能.md
+++ b/3. 扩展功能/2. 通用功能.md
@@ -4,22 +4,22 @@
 命令是VS Code运作的中心。您打开命令面板运行命令，绑定自定义快捷键给命令，在上下文菜单右击调用命令
 
 一个扩展能：
-- 使用[`vscode.commands`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md##commands)API注册并执行命令
-- 使用[`contributes.commands`](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md##contributes.commands)贡献点使命令在命令面板中可用
+- 使用[`vscode.commands`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md##commands)API注册并执行命令
+- 使用[`contributes.commands`](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md##contributes.commands)贡献点使命令在命令面板中可用
 
 在[扩展指南/命令]主题中了解更多
 ## 配置
-一个扩展可以使用[`contributes.configuration`](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md##contributes.configuration)贡献点贡献扩展指定的配置并通过[`workspace.getConfiguration`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md##工作空间)API读取
+一个扩展可以使用[`contributes.configuration`](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md##contributes.configuration)贡献点贡献扩展指定的配置并通过[`workspace.getConfiguration`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md##工作空间)API读取
 ## 快捷键
-一个扩展可以添加自定义快捷键。在[`contributes.keybindings`](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md##contributes.keybindings)贡献点和[快捷键](https://code.visualstudio.com/docs/getstarted/keybindings)主题阅读更多
+一个扩展可以添加自定义快捷键。在[`contributes.keybindings`](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md##contributes.keybindings)贡献点和[快捷键](https://code.visualstudio.com/docs/getstarted/keybindings)主题阅读更多
 ## 上下文菜单
-一个扩展可以注册在VS Code UI不同的部分右击显示的自定义上下文菜单项。在[`contributes.menus`](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md##contributes.menus)贡献点阅读更多
+一个扩展可以注册在VS Code UI不同的部分右击显示的自定义上下文菜单项。在[`contributes.menus`](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md##contributes.menus)贡献点阅读更多
 ## 数据储存
 数据储存有四个选项
-- [`ExtensionContext.workspaceState`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md###ExtensionContext)：您可以写入键值对的工作空间储存。VS Code管理储存并在相同工作空间再次打开时重置
-- [`ExtensionContext.globalState`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md###ExtensionContext)：一个您可以写入键值对的全局储存。VS Code管理储存并在每个扩展启用时重置。您可以在全局储存中通过在`globalState`使用`setKeysForSync`方法设置同步密匙选择同步键值对
-- [`ExtensionContext.storageUri`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md###ExtensionContext)：一个工作空间指定的指向一个您的扩展读取/写入访问的本地目录储存URI。如果您需要存储只能从当前工作空间访问的大文件，这是一个好选择
-- [`ExtensionContext.globalStorageUri`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md###ExtensionContext)：一个指向一个您的扩展读取/写入访问的本地目录全局储存URI。如果您需要存储可从所有工作空间访问的大文件，这是一个好选择
+- [`ExtensionContext.workspaceState`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md###ExtensionContext)：您可以写入键值对的工作空间储存。VS Code管理储存并在相同工作空间再次打开时重置
+- [`ExtensionContext.globalState`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md###ExtensionContext)：一个您可以写入键值对的全局储存。VS Code管理储存并在每个扩展启用时重置。您可以在全局储存中通过在`globalState`使用`setKeysForSync`方法设置同步密匙选择同步键值对
+- [`ExtensionContext.storageUri`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md###ExtensionContext)：一个工作空间指定的指向一个您的扩展读取/写入访问的本地目录储存URI。如果您需要存储只能从当前工作空间访问的大文件，这是一个好选择
+- [`ExtensionContext.globalStorageUri`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md###ExtensionContext)：一个指向一个您的扩展读取/写入访问的本地目录全局储存URI。如果您需要存储可从所有工作空间访问的大文件，这是一个好选择
 
 扩展上下文在[扩展进入文件](/2.%20%E5%BC%80%E5%A7%8B/2.%20%E6%89%A9%E5%B1%95%E8%A7%A3%E5%89%96.md#扩展进入文件)中的`activate`函数可用
 ## setKeyForSync示例
@@ -41,19 +41,19 @@ if (isHigher(currentVersion, lastVersionShown)) {
 跨机器共享状态通过共享已排除或查看的标志有助于避免用户看到欢迎页面或更新页面的多个实例的问题。
 ## 显示通知
 几乎所有扩展需要在某些点展现信息给用户。VS Code提供三个API显示不同严重程度的提示消息
-- [`window.showInformationMessage`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md##window)
-- [`window.showWarningMessage`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md##window)
-- [`window.showErrorMessage`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md##window)
+- [`window.showInformationMessage`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md##window)
+- [`window.showWarningMessage`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md##window)
+- [`window.showErrorMessage`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md##window)
 ## 快速拾取
-通过[`vscode.QuickPick`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md###QuickPick<T>)API，您可以轻松地收集用户输入或让用户从多个选择中选择一个。[快速输入示例](https://github.com/microsoft/vscode-extension-samples/tree/main/quickinput-sample)解释了API
+通过[`vscode.QuickPick`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md###QuickPick<T>)API，您可以轻松地收集用户输入或让用户从多个选择中选择一个。[快速输入示例](https://github.com/microsoft/vscode-extension-samples/tree/main/quickinput-sample)解释了API
 ## 文件拾取器
-扩展可以使用[`window.showOpenDialog`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md##window)API打开系统文件拾取器并选择文件或文件夹
+扩展可以使用[`window.showOpenDialog`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md##window)API打开系统文件拾取器并选择文件或文件夹
 ## 输出频道
-输出面板显示一批对日志记录很有用的[`OutputChannel`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md###OutputChannel)。您可以轻易地充分利用[`window.createOutputChannel`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md##window)API
+输出面板显示一批对日志记录很有用的[`OutputChannel`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md###OutputChannel)。您可以轻易地充分利用[`window.createOutputChannel`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md##window)API
 ## 进度条API
-您可以使用[vscode.Progress](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md###Progress<T>)API将进度更新报告给用户
+您可以使用[vscode.Progress](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md###Progress<T>)API将进度更新报告给用户
 
-进度条可以使用[`ProgressOptions`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md###ProgressOptions)选项展示在不同的位置：
+进度条可以使用[`ProgressOptions`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md###ProgressOptions)选项展示在不同的位置：
 - 在通知区域
 - 在源控制视图
 - VS Code窗口常规进度条
