--- a/4. 扩展指南/1. 概览.md
+++ b/4. 扩展指南/1. 概览.md
@@ -10,45 +10,45 @@
 - 类似于示例的真正扩展
 - API概念的解释
 ## 指南&示例
-这里是VS Code网站的指南，包括它们[VS Code API](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md)和[贡献点](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md)的用法。不要忘记参考[UX指南](/5.%20UX%20%E6%8C%87%E5%8D%97/1.%20%E6%A6%82%E8%A7%88.md)学习最好的创建扩展用户界面练习
+这里是VS Code网站的指南，包括它们[VS Code API](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md)和[贡献点](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md)的用法。不要忘记参考[UX指南](/5.%20UX%20%E6%8C%87%E5%8D%97/1.%20%E6%A6%82%E8%A7%88.md)学习最好的创建扩展用户界面练习
 | **VS Code网站指南** | **API & 贡献点**|
 | - | - |
-| [命令](2.%20%E5%91%BD%E4%BB%A4.md) | [commands](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#commands) |
-| [颜色主题](3.%20%E9%A2%9C%E8%89%B2%E4%B8%BB%E9%A2%98.md) | [contributes.themes](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.themes) | 
-| [文件图标主题](4.%20%E6%96%87%E4%BB%B6%E5%9B%BE%E6%A0%87%E4%B8%BB%E9%A2%98.md) | [contributes.iconThemes](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.iconThemes) |
-| [产品图标主题](5.%20%E4%BA%A7%E5%93%81%E5%9B%BE%E6%A0%87%E4%B8%BB%E9%A2%98.md) | [contributes.productIconThemes](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.productIconThemes) |
-| [树状视图](6.%20%E6%A0%91%E7%8A%B6%E8%A7%86%E5%9B%BE.md) | [window.createTreeView](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [window.registerTreeDataProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [TreeView](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TreeView<T>)<br/> [TreeDataProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TreeDataProvider)<br/>[contributes.views](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.views)<br/>[contributes.viewContainers](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.viewContainers) |
-| [网络视图](7.%20%E7%BD%91%E7%BB%9C%E8%A7%86%E5%9B%BE.md) | [window.createWebviewPanel](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [window.registerWebviewPanelSerializer](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) |
-| [自定义编辑器](9.%20%E8%87%AA%E5%AE%9A%E4%B9%89%E7%BC%96%E8%BE%91%E5%99%A8.md) | [window.registerCustomEditorProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [CustomTextEditorProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#CustomTextEditorProvider) <br/> [contributes.customEditors](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.customEditors) |
-| [虚拟文档](10.%20%E8%99%9A%E6%8B%9F%E6%96%87%E6%A1%A3.md) | [workspace.registerTextDocumentContentProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#workspace) <br/> [commands.registerCommand](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#commands) <br/> [window.showInputBox](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) |
-| [虚拟工作空间](11.%20%E8%99%9A%E6%8B%9F%E5%B7%A5%E4%BD%9C%E7%A9%BA%E9%97%B4.md) | [workspace.fs](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#workspace) <br/> capabilities.virtualWorkspaces |
-| [工作空间信任](13.%20%E5%B7%A5%E4%BD%9C%E7%A9%BA%E9%97%B4%E4%BF%A1%E4%BB%BB.md) | [workspace.isTrusted](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#workspace) <br/> [workspace.onDidGrantWorkspaceTrust](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#workspace) <br/> capabilities.virtualWorkspaces |
-| [任务提供器](14.%20%E4%BB%BB%E5%8A%A1%E6%8F%90%E4%BE%9B%E5%99%A8.md) | [tasks.registerTaskProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#tasks) <br/> [Task](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#Task) <br/> [ShellExecution](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#ShellExecution) <br/> [contributes.taskDefinitions](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.taskDefinitions) |
-| [源控制](15.%20%E6%BA%90%E6%8E%A7%E5%88%B6.md) | [workspace.workspaceFolders](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#workspace) <br/> [SourceControl](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#SourceControl) <br/> [SourceControlResourceGroup](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#SourceControlResourceGroup) <br/> [scm.createSourceControl](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#scm) <br/> [TextDocumentContentProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextDocumentContentProvider) <br/> [contributes.menus](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.menus) |
-| [调试器扩展](16.%20%E8%B0%83%E8%AF%95%E5%99%A8%E6%89%A9%E5%B1%95.md) | [contributes.breakpoints](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.breakpoints) <br/> [contributes.debuggers](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.debuggers) | [debug](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#debug) |
+| [命令](2.%20%E5%91%BD%E4%BB%A4.md) | [commands](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#commands) |
+| [颜色主题](3.%20%E9%A2%9C%E8%89%B2%E4%B8%BB%E9%A2%98.md) | [contributes.themes](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.themes) | 
+| [文件图标主题](4.%20%E6%96%87%E4%BB%B6%E5%9B%BE%E6%A0%87%E4%B8%BB%E9%A2%98.md) | [contributes.iconThemes](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.iconThemes) |
+| [产品图标主题](5.%20%E4%BA%A7%E5%93%81%E5%9B%BE%E6%A0%87%E4%B8%BB%E9%A2%98.md) | [contributes.productIconThemes](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.productIconThemes) |
+| [树状视图](6.%20%E6%A0%91%E7%8A%B6%E8%A7%86%E5%9B%BE.md) | [window.createTreeView](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [window.registerTreeDataProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [TreeView](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TreeView<T>)<br/> [TreeDataProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TreeDataProvider)<br/>[contributes.views](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.views)<br/>[contributes.viewContainers](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.viewContainers) |
+| [网络视图](7.%20%E7%BD%91%E7%BB%9C%E8%A7%86%E5%9B%BE.md) | [window.createWebviewPanel](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [window.registerWebviewPanelSerializer](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) |
+| [自定义编辑器](9.%20%E8%87%AA%E5%AE%9A%E4%B9%89%E7%BC%96%E8%BE%91%E5%99%A8.md) | [window.registerCustomEditorProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [CustomTextEditorProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#CustomTextEditorProvider) <br/> [contributes.customEditors](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.customEditors) |
+| [虚拟文档](10.%20%E8%99%9A%E6%8B%9F%E6%96%87%E6%A1%A3.md) | [workspace.registerTextDocumentContentProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#workspace) <br/> [commands.registerCommand](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#commands) <br/> [window.showInputBox](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) |
+| [虚拟工作空间](11.%20%E8%99%9A%E6%8B%9F%E5%B7%A5%E4%BD%9C%E7%A9%BA%E9%97%B4.md) | [workspace.fs](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#workspace) <br/> capabilities.virtualWorkspaces |
+| [工作空间信任](13.%20%E5%B7%A5%E4%BD%9C%E7%A9%BA%E9%97%B4%E4%BF%A1%E4%BB%BB.md) | [workspace.isTrusted](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#workspace) <br/> [workspace.onDidGrantWorkspaceTrust](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#workspace) <br/> capabilities.virtualWorkspaces |
+| [任务提供器](14.%20%E4%BB%BB%E5%8A%A1%E6%8F%90%E4%BE%9B%E5%99%A8.md) | [tasks.registerTaskProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#tasks) <br/> [Task](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#Task) <br/> [ShellExecution](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#ShellExecution) <br/> [contributes.taskDefinitions](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.taskDefinitions) |
+| [源控制](15.%20%E6%BA%90%E6%8E%A7%E5%88%B6.md) | [workspace.workspaceFolders](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#workspace) <br/> [SourceControl](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#SourceControl) <br/> [SourceControlResourceGroup](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#SourceControlResourceGroup) <br/> [scm.createSourceControl](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#scm) <br/> [TextDocumentContentProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TextDocumentContentProvider) <br/> [contributes.menus](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.menus) |
+| [调试器扩展](16.%20%E8%B0%83%E8%AF%95%E5%99%A8%E6%89%A9%E5%B1%95.md) | [contributes.breakpoints](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.breakpoints) <br/> [contributes.debuggers](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.debuggers) | [debug](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#debug) |
 | [Markdown扩展](17.%20Markdown%E6%89%A9%E5%B1%95.md) | markdown.previewStyles <br/> markdown.markdownItPlugins <br/> markdown.previewScripts |
-| [测试扩展](18.%20%E6%B5%8B%E8%AF%95%E6%89%A9%E5%B1%95.md) | [TestController](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TestController) <br/> [TestItem](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TestItem) |
+| [测试扩展](18.%20%E6%B5%8B%E8%AF%95%E6%89%A9%E5%B1%95.md) | [TestController](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TestController) <br/> [TestItem](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TestItem) |
 | [自定义数据扩展](19.%20%E8%87%AA%E5%AE%9A%E4%B9%89%E6%95%B0%E6%8D%AE%E6%89%A9%E5%B1%95.md) | contributes.html.customData <br/> contributes.css.customData |
 
 这里是一列额外的[VS Code 扩展示例仓库](https://github.com/microsoft/vscode-extension-samples)示例
 | GitHub 仓库示例 | API & 贡献点 |
 | - | - |
-| [网络视图示例](https://github.com/microsoft/vscode-extension-samples/tree/main/webview-sample) | [window.createWebviewPanel](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [window.registerWebviewPanelSerializer](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) |
-| [状态栏示例](https://github.com/microsoft/vscode-extension-samples/tree/main/statusbar-sample) | [window.createStatusBarItem](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [StatusBarItem](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#StatusBarItem) |
-| [树状视图示例](https://github.com/microsoft/vscode-extension-samples/tree/main/tree-view-sample) | [window.createTreeView](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [window.registerTreeDataProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [TreeView](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TreeView) <br/> [TreeDataProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TreeDataProvider) <br/> [contributes.views](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.views) <br/> [contributes.viewContainers](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.viewContainers) | 
-| [任务提供器示例](https://github.com/microsoft/vscode-extension-samples/tree/main/task-provider-sample) | [tasks.registerTaskProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#tasks) <br/> [Tasks](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#Tasks) <br/> [ShellExecution](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#ShellExecution) <br/> [contributes.taskDefinitions](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.taskDefinitions) |
-| [多根示例](https://github.com/microsoft/vscode-extension-samples/tree/main/basic-multi-root-sample) | [workspace.getWorkspaceFolder](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#workspace) <br/> [workspace.onDidChangeWorkspaceFolders](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#workspace) |
-| [补全提供器示例](https://github.com/microsoft/vscode-extension-samples/tree/main/completions-sample) | [languages.registerCompletionItemProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#languages) <br/> [CompletionItem](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#CompletionItem) <br/> [SnippetString](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#SnippetString) |
-| [文件系统提供器示例](https://github.com/microsoft/vscode-extension-samples/tree/main/fsprovider-sample) | [workspace.registerFileSystemProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#workspace) |
-| [编辑器装饰器示例](https://github.com/microsoft/vscode-extension-samples/tree/main/decorator-sample) | [TextEditor.setDecorations](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextEditor) <br/> [DecorationsOptions](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#DecorationsOptions) <br/> [DecorationInstanceRenderOptions](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#DecorationInstanceRenderOptions) <br/> [ThemableDecorationInstanceRenderOptions](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#ThemableDecorationInstanceRenderOptions) <br/> [window.createTextEditorDecorationType](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [TextEditorDecorationType](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextEditorDecorationType) <br/> [contributes.colors](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.colors) |
+| [网络视图示例](https://github.com/microsoft/vscode-extension-samples/tree/main/webview-sample) | [window.createWebviewPanel](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [window.registerWebviewPanelSerializer](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) |
+| [状态栏示例](https://github.com/microsoft/vscode-extension-samples/tree/main/statusbar-sample) | [window.createStatusBarItem](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [StatusBarItem](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#StatusBarItem) |
+| [树状视图示例](https://github.com/microsoft/vscode-extension-samples/tree/main/tree-view-sample) | [window.createTreeView](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [window.registerTreeDataProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [TreeView](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TreeView) <br/> [TreeDataProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TreeDataProvider) <br/> [contributes.views](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.views) <br/> [contributes.viewContainers](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.viewContainers) | 
+| [任务提供器示例](https://github.com/microsoft/vscode-extension-samples/tree/main/task-provider-sample) | [tasks.registerTaskProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#tasks) <br/> [Tasks](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#Tasks) <br/> [ShellExecution](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#ShellExecution) <br/> [contributes.taskDefinitions](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.taskDefinitions) |
+| [多根示例](https://github.com/microsoft/vscode-extension-samples/tree/main/basic-multi-root-sample) | [workspace.getWorkspaceFolder](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#workspace) <br/> [workspace.onDidChangeWorkspaceFolders](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#workspace) |
+| [补全提供器示例](https://github.com/microsoft/vscode-extension-samples/tree/main/completions-sample) | [languages.registerCompletionItemProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#languages) <br/> [CompletionItem](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#CompletionItem) <br/> [SnippetString](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#SnippetString) |
+| [文件系统提供器示例](https://github.com/microsoft/vscode-extension-samples/tree/main/fsprovider-sample) | [workspace.registerFileSystemProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#workspace) |
+| [编辑器装饰器示例](https://github.com/microsoft/vscode-extension-samples/tree/main/decorator-sample) | [TextEditor.setDecorations](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TextEditor) <br/> [DecorationsOptions](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#DecorationsOptions) <br/> [DecorationInstanceRenderOptions](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#DecorationInstanceRenderOptions) <br/> [ThemableDecorationInstanceRenderOptions](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#ThemableDecorationInstanceRenderOptions) <br/> [window.createTextEditorDecorationType](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [TextEditorDecorationType](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TextEditorDecorationType) <br/> [contributes.colors](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.colors) |
 | [本地化示例](https://github.com/microsoft/vscode-extension-samples/tree/main/l10n-sample) | |
-| [终端示例](https://github.com/microsoft/vscode-extension-samples/tree/main/terminal-sample) | [window.createTerminal](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [window.onDidChangeActiveTerminal](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [window.onDidCloseTerminal](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [window.onDidOpenTermial](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [window.Terminal](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#Terminal) <br/> [window.terminals](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) |
-[Vim示例](https://github.com/microsoft/vscode-extension-samples/tree/main/vim-sample) | [commands](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#commands) <br/> [StatusBarItem](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#StatusBarItem) <br/> [window.createStatusBarItem](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [TextEditorCursorStyle](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextEditorCursorStyle) <br/> [window.activeTextEditor](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#window) <br/> [Position](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#Position) <br/> [Range](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#Range) <br/> [Selection](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#Selection) <br/> [TextEditor](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextEditor) <br/> [TextEditorRevealType](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextEditorRevealType) <br/> [TextDocument](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextDocument) |
-| [源控制示例](https://github.com/microsoft/vscode-extension-samples/tree/main/source-control-sample) | [workspace.workspaceFolders](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#workspace) <br/> [SourceControl](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#SourceControl) <br/> [SourceControlResourceGroup](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#SourceControlResourceGroup) <br/> [scm.createSourceControl](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#scm) <br/> [TextDocumentContentProvider](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TextDocumentContentProvider) <br/> [contributes.menus](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.menus) |
+| [终端示例](https://github.com/microsoft/vscode-extension-samples/tree/main/terminal-sample) | [window.createTerminal](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [window.onDidChangeActiveTerminal](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [window.onDidCloseTerminal](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [window.onDidOpenTermial](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [window.Terminal](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#Terminal) <br/> [window.terminals](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) |
+[Vim示例](https://github.com/microsoft/vscode-extension-samples/tree/main/vim-sample) | [commands](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#commands) <br/> [StatusBarItem](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#StatusBarItem) <br/> [window.createStatusBarItem](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [TextEditorCursorStyle](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TextEditorCursorStyle) <br/> [window.activeTextEditor](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#window) <br/> [Position](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#Position) <br/> [Range](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#Range) <br/> [Selection](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#Selection) <br/> [TextEditor](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TextEditor) <br/> [TextEditorRevealType](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TextEditorRevealType) <br/> [TextDocument](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TextDocument) |
+| [源控制示例](https://github.com/microsoft/vscode-extension-samples/tree/main/source-control-sample) | [workspace.workspaceFolders](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#workspace) <br/> [SourceControl](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#SourceControl) <br/> [SourceControlResourceGroup](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#SourceControlResourceGroup) <br/> [scm.createSourceControl](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#scm) <br/> [TextDocumentContentProvider](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TextDocumentContentProvider) <br/> [contributes.menus](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.menus) |
 | [注释API示例](https://github.com/microsoft/vscode-extension-samples/tree/main/comment-sample) | |
-| [文档编辑示例](https://github.com/microsoft/vscode-extension-samples/tree/main/document-editing-sample) |[commands](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#commands) |
-| [开始示例](https://github.com/microsoft/vscode-extension-samples/tree/main/getting-started-sample) | [contributes.walkthroughs](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.walkthroughs) |
-| [测试扩展](https://github.com/microsoft/vscode-extension-samples/tree/main/test-provider-sample) | [TestControl](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TestControl) <br/> [TestItem](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#TestItem) |
+| [文档编辑示例](https://github.com/microsoft/vscode-extension-samples/tree/main/document-editing-sample) |[commands](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#commands) |
+| [开始示例](https://github.com/microsoft/vscode-extension-samples/tree/main/getting-started-sample) | [contributes.walkthroughs](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.walkthroughs) |
+| [测试扩展](https://github.com/microsoft/vscode-extension-samples/tree/main/test-provider-sample) | [TestControl](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TestControl) <br/> [TestItem](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#TestItem) |
 ## 语言扩展示例
 这些是[语言扩展](/6.%20%E8%AF%AD%E8%A8%80%E6%89%A9%E5%B1%95/1.%20%E6%A6%82%E8%A7%88.md)的示例：
 | 示例 | VS Code网站指南 |
