--- a/4. 扩展指南/2. 命令.md
+++ b/4. 扩展指南/2. 命令.md
@@ -1,9 +1,9 @@
 # 命令
 Visual Studio Code中，命令触发操作。如果您曾[配置过快捷键](https://code.visualstudio.com/docs/getstarted/keybindings)，那么您已经使用了命令。命令同样被扩展用于展现功能给用户，绑定操作到VS Code UI和实现内部逻辑
 ## 使用命令
-VS Code包含了一大套您可以用来与编辑器交互、控制用户界面或执行后台操作的[内建命令](/9.%20%E6%9F%A5%E9%98%85/5.%20%E5%86%85%E5%BB%BA%E5%91%BD%E4%BB%A4.md)。许多扩展同样展现它们的核心功能作为用户与其他扩展能够使用的命令
+VS Code包含了一大套您可以用来与编辑器交互、控制用户界面或执行后台操作的[内建命令](/9.%20%E5%8F%82%E8%80%83/5.%20%E5%86%85%E5%BB%BA%E5%91%BD%E4%BB%A4.md)。许多扩展同样展现它们的核心功能作为用户与其他扩展能够使用的命令
 ### 编程执行一条命令
-[`vscode.commands.executeCommand`](/9.%20%E6%9F%A5%E9%98%85/1.%20VS%20Code%20API.md#commands)API编程执行一条命令。这让您使用VS Code内建功能，并以扩展为基础构建如VS Code内建Git和Markdown扩展
+[`vscode.commands.executeCommand`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md#commands)API编程执行一条命令。这让您使用VS Code内建功能，并以扩展为基础构建如VS Code内建Git和Markdown扩展
 
 例如`editor.action.addCommentLine`命令，在启用文本编辑器中注释当前行：
 ```typescript
@@ -36,7 +36,7 @@ async function printDefinitionsForActiveEditor() {
 ```
 寻找可用的命令：
 - [浏览键盘快捷键](https://code.visualstudio.com/docs/getstarted/keybindings)
-- [仔细查看VS Code内建高级命令API](/9.%20%E6%9F%A5%E9%98%85/5.%20%E5%86%85%E5%BB%BA%E5%91%BD%E4%BB%A4.md)
+- [仔细查看VS Code内建高级命令API](/9.%20%E5%8F%82%E8%80%83/5.%20%E5%86%85%E5%BB%BA%E5%91%BD%E4%BB%A4.md)
 ### 命令URI
 命令URI是执行给定命令的链接。它们可以作为在悬停文本上作为可点击链接、补全项详情或网络视图内使用
 
@@ -141,7 +141,7 @@ export function activate(context: vscode.ExtensionContext) {
 ### 控制命令在命令面板中的出现
 默认，所有通过`package.json`的`commands`节贡献的面向用户的命令在命令面板中出现。然而，许多命令仅仅在确定的条件中有价值如当有启用的指定语言文本编辑器或用户有确定的配置选项设置
 
-[`menus.commandPalette`](/9.%20%E6%9F%A5%E9%98%85/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.menus)贡献点让您限制一个命令何时应该显示在命令面板中。它需要目标命令的ID和一个[时间状语上下文](/9.%20%E6%9F%A5%E9%98%85/6.%20%E6%97%B6%E9%97%B4%E7%8A%B6%E8%AF%AD%E4%B8%8A%E4%B8%8B%E6%96%87.md)控制命令显示
+[`menus.commandPalette`](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.menus)贡献点让您限制一个命令何时应该显示在命令面板中。它需要目标命令的ID和一个[时间状语上下文](/9.%20%E5%8F%82%E8%80%83/6.%20%E6%97%B6%E9%97%B4%E7%8A%B6%E8%AF%AD%E4%B8%8A%E4%B8%8B%E6%96%87.md)控制命令显示
 ```json
 {
   "contributes": {
@@ -158,7 +158,7 @@ export function activate(context: vscode.ExtensionContext) {
 ```
 现在`myExtension.sayHello`仅当用户在一个Markdown文件中显示在命令面板中
 ### 命令的启用
-命令通过一个`enablement`属性支持启用——它的值是一个[时间状语上下文](/9.%20%E6%9F%A5%E9%98%85/6.%20%E6%97%B6%E9%97%B4%E7%8A%B6%E8%AF%AD%E4%B8%8A%E4%B8%8B%E6%96%87.md)。启用应用到所有菜单和已注册按键绑定
+命令通过一个`enablement`属性支持启用——它的值是一个[时间状语上下文](/9.%20%E5%8F%82%E8%80%83/6.%20%E6%97%B6%E9%97%B4%E7%8A%B6%E8%AF%AD%E4%B8%8A%E4%B8%8B%E6%96%87.md)。启用应用到所有菜单和已注册按键绑定
 > 注意：菜单项`enablement`和`when`条件之间有语义重叠。后者用于阻止菜单中充满禁用项。例如，一个分析JavaScript正则表达式命令应该**当**文件是JavaScript时显示并且仅在指针在一个正则表达式上方时**启用**。`时间`状语通过在其他语言文件不显示命令阻止杂乱。强烈建议避免混乱的菜单
 
 最后，用菜单如命令面板或上下文菜单显示命令实现处理启用的不同方法。编辑器和浏览器上下文菜单在命令面板过滤它们时渲染启用/禁用项
