--- a/4. 扩展指南/3. 颜色主题.md
+++ b/4. 扩展指南/3. 颜色主题.md
@@ -36,3 +36,64 @@ Visual Studio Code中可见颜色分为两类
 ## 语义颜色
 在VS Code发行版1.43中，TypeScript和JavaScript的语义着色可用。我们期待它不久被更多语言采纳
 
+语义颜色丰富了基于语言服务提供符号信息的语法着色，这可以更完全地理解项目。一旦语言服务运行并且计算了语义标记，着色更改将立即出现
+
+每个主题控制了是否使用指定作为主题定义一部分的设置启用语义高亮。每个语义标记的样式由主题样式规则定义。
+
+用户可以使用`editor.tokenColorCustomizations`设置重载语义高亮特性和着色规则。
+
+为指定主题启用语义高亮：
+
+
+```json
+"editor.tokenColorCustomizations": {
+    "[Material Theme]": {
+        "semanticHighlighting": true
+    }
+},
+```
+
+主题可以如[语义高亮指南](/6.%20%E8%AF%AD%E8%A8%80%E6%89%A9%E5%B1%95/3.%20%E8%AF%AD%E4%B9%89%E9%AB%98%E4%BA%AE%E6%8C%87%E5%8D%97.md#语义着色)所描述的为语义标记设置主题规则
+
+## 创建一个新的颜色主题
+
+一旦您使用`workbench.colorCustomizations`和`editor.tokenColorCustomizations`调整了您的主题颜色，那么是时候创建一个真正的主题了。
+
+1. 从**命令面板**中使用**Developer: Generate Color Theme from Current Settings（开发人员，使用当前设置生成主题颜色）**命令生成一个主题文件
+2. 使用VS Code的[Yeoman](https://yeoman.io/)扩展生成器生成一个新的主题扩展：
+
+```shell
+npm install -g yo generator-code
+yo code
+```
+
+3. 如果您依上介绍自定义一个主题，选择“Start fresh（重新开始）”。
+
+4. 从您的设置中复制生成的主题文件到新扩展
+
+您同样可以通过告知扩展生成器导入一个TextMate主题文件（.tmTheme）使用一个已存在的TextMate主题并将其打包以在VS Code中使用。或者如果您已经下载了主题，使用引向要使用`.tmTheme`文件的链接替换`tokenColors`段
+
+```json
+{
+  "type": "dark",
+  "colors": {
+    "editor.background": "#1e1e1e",
+    "editor.foreground": "#d4d4d4",
+    "editorIndentGuide.background": "#404040",
+    "editorRuler.foreground": "#333333",
+    "activityBarBadge.background": "#007acc",
+    "sideBarTitle.foreground": "#bbbbbb"
+  },
+  "tokenColors": "./Diner.tmTheme"
+}
+```
+
+> **注：**给予您颜色定义文件以`-color-theme.json`后缀，然后您将在编辑时得到悬浮提示、代码补全、颜色装饰和颜色拾取器
+
+> **注：**[ColorSublime](https://colorsublime.github.io/)拥有成百可以从中选择已存在的TextMate主题。挑选一个您喜欢的主题复制下载链接以在Yeoman生成器中使用或在您的扩展中使用。它将类似于`“https://raw.githubusercontent.com/Colorsublime/Colorsublime-Themes/master/themes/(name).tmTheme”`的格式
+
+## 测试新扩展
+
+为了试用新主题，按下F5启动扩展开发宿主窗口。
+
+在此，通过**File（文件）** -> **Preferences（首选项）**打开颜色主题拾取器
