--- a/4. 扩展指南/3. 颜色主题.md
+++ b/4. 扩展指南/3. 颜色主题.md
@@ -69,6 +69,8 @@ yo code
 
 3. 如果您依上介绍自定义一个主题，选择“Start fresh（重新开始）”。
 
+![](https://code.visualstudio.com/assets/api/extension-guides/color-theme/yocode-colortheme.png)
+
 4. 从您的设置中复制生成的主题文件到新扩展
 
 您同样可以通过告知扩展生成器导入一个TextMate主题文件（.tmTheme）使用一个已存在的TextMate主题并将其打包以在VS Code中使用。或者如果您已经下载了主题，使用引向要使用`.tmTheme`文件的链接替换`tokenColors`段
@@ -96,4 +98,6 @@ yo code
 
 为了试用新主题，按下F5启动扩展开发宿主窗口。
 
-在此，通过**File（文件）** -> **Preferences（首选项）**打开颜色主题拾取器
+在此，通过**File（文件）** > **Preferences（首选项）** > **Theme（主题）** > **Color Theme（颜色主题）**打开颜色主题拾取器，然后您可以在下拉列表看到您的主题。按下上下箭头键来查看您主题的实时预览
+
+!
