--- a/4. 扩展指南/3. 颜色主题.md
+++ b/4. 扩展指南/3. 颜色主题.md
@@ -100,4 +100,22 @@ yo code
 
 在此，通过**File（文件）** > **Preferences（首选项）** > **Theme（主题）** > **Color Theme（颜色主题）**打开颜色主题拾取器，然后您可以在下拉列表看到您的主题。按下上下箭头键来查看您主题的实时预览
 
-!
+![](https://code.visualstudio.com/assets/api/extension-guides/color-theme/mytheme.png)
+
+主题文件的更改将实时应用在`扩展开发宿主`窗口
+
+## 发布扩展到扩展市场
+
+如果您想要和社区分享您的新扩展，您可以发布它到[扩展市场](https://code.visualstudio.com/docs/editor/extension-marketplace)。使用[vsce发布工具](/7.%20%E6%B5%8B%E8%AF%95%E4%B8%8E%E5%8F%91%E5%B8%83/2.%20%E5%8F%91%E5%B8%83%E6%89%A9%E5%B1%95.md)打包您的主题并发布到VS Code市场
+
+> **注：**为了使用户便利地找到您的主题，在扩展介绍中包含“theme（主题）”词并在您的`package.json`设置`Category（分类）`为`Theme（主题）`
+
+我们同样介绍了如何使您的扩展在VS Code市场中看起来更棒，查阅[市场提交提示](/9.%20%E5%8F%82%E8%80%83/4.%20%E6%89%A9%E5%B1%95%E6%B8%85%E5%8D%95.md#市场提交建议)
+
+## 添加一个新颜色ID
+
+颜色ID同样可以由扩展通过[颜色贡献点](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.colors)贡献。这些颜色同样在`workbench.colorCustomizations`设置和颜色定义文件中使用代码补全出现。用户可以在[扩展贡献](https://code.visualstudio.com/docs/editor/extension-marketplace#_extension-details)标签页查看一个扩展定义了哪些颜色
+
+## 深度阅读
+
+- [CSS Tricks - Creating a VS Code theme](https://css-tricks.com/creating-a-vs-code-theme/)
